# uuidea-data-catalog

./: .gitignore  .gitmodules  LICENSE  README.md  antora-playbook.yml  antora.yml  package.json  pyproject.toml
.github/workflows/: deploy.yml
data-catalog/: data-catalog.ttl  data-catalog.yaml  prefix.yaml
examples/: example-concept.yaml  example-dataset.yaml  example-series.yaml
scripts/: generate-datacatalog.sh
simple_data_catalog_model/: README.md  antora-playbook.yml  antora.yml  datamodel.puml  datamodel.py  pyproject.toml  shape.ttl
simple_data_catalog_model/.github/workflows/: deoploy-antora.yml
simple_data_catalog_model/documentation/: antora.yml
simple_data_catalog_model/reference-standards/: odrl.jsonld
simple_data_catalog_model/src/simple_data_catalog_model/: data-catalog.yaml  policy.yaml
simple_data_catalog_model/supplemental-ui/helpers/: resolveResourceURL.js
simple_data_catalog_model/supplemental-ui/js/: add-back-to-home-nav-item.js  medium-zoom.config.js
simple_data_catalog_model/supplemental-ui/partials/: footer-scripts.hbs  header-content.hbs
simple_data_catalog_model/tests/: cc-by-sa-4.0-policy-example.yaml  fair-principles-obligations.yaml  fair-principles-policy-example.yaml  policy.ttl  testdata.json  testdata.ttl  testdata.yaml
supplemental-ui/css/: extra.css  medium-zoom.css
supplemental-ui/helpers/: concat.js
supplemental-ui/partials/: footer-content.hbs  head-styles.hbs  header-content.hbs
