[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uuidea_Data_Catalog"
version = "0.0.1"
authors = [{ name="Joep van Genuchten", email="joep@uuidea.eu" }]
description = "A simple package that supports data catalogging for small organizations and projects"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

# -------------------------- dependencies --------------------------
dependencies = [
    "pandas",
    "matplotlib",
    "wordcloud",
    "validators",
    "pydantic",
    "asciidoc3",
    "jinja2",
    "rich",
    "dataclasses",
    "pyyaml",
    "linkml>=1.0",
    "rdflib",
    "simple_data_catalog_generator @ git+https://github.com/uuidea/simple-data-catalog-generator.git",
]

[project.urls]
Homepage = "https://github.com/uuidea/simple_data_catalog"
Issues   = "https://github.com/uuidea/simple_data_catalog/issues"

[tool.uv]
package = false

[tool.hatch.metadata]
allow-direct-references = true



# (you can delete the old `dependencies = [...]` block that was under this table)